dream-table -> dreamtable

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = dreamtable
 version = file: dreamtable/_version.txt
 author = Jesse Dubay
 author-email = jesse@thefortytwo.net
-home-page = https://github.com/vreon/dream-table
+home-page = https://github.com/vreon/dreamtable
 description = An infinite canvas for retro game assets
 long-description = file: README.md
 long_description_content_type = text/markdown
@@ -21,7 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
 project_urls = 
-    Bug Tracker = https://github.com/vreon/dream-table/issues
+    Bug Tracker = https://github.com/vreon/dreamtable/issues
 
 [options]
 zip_safe = false
