Make `python -m dreamtable` work

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-project_urls = 
+project_urls =
     Bug Tracker = https://github.com/vreon/dreamtable/issues
 
 [options]
@@ -37,7 +37,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    dreamtable = dreamtable.main:main
+    dreamtable = dreamtable.app:run
 
 [options.package_data]
 dreamtable = py.typed, _version.txt, *.pyi
