--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ long_description_content_type = text/markdown
 license-file = COPYING
 platform = any
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
